{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 65,
  "lineage": "bdda6ec5-12a6-38cb-ea0d-c0b5a76a7cfe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "shreya_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a81a99f5ec58529",
            "arn": "arn:aws:ec2:us-east-1:326151034032:instance/i-0f3a2aa61d57a69b0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2InstanceProfile",
            "id": "i-0f3a2aa61d57a69b0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e5c3d6355140db6b",
            "private_dns": "ip-10-0-1-21.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.21",
            "public_ip": "54.167.123.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01350c9cae2c76ceb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0a0eec7f5c0cb70e2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02857543a4b2c6f8a",
            "tags": {
              "Environment": "new",
              "Name": "shreya_ec2"
            },
            "tags_all": {
              "Environment": "new",
              "Name": "shreya_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a0eec7f5c0cb70e2"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_instance_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.shreya-ec2_sg",
            "aws_subnet.shreya_publicsubnet",
            "aws_vpc.shreya_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "shreya_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326151034032:internet-gateway/igw-0d9aef7b2b68c0171",
            "id": "igw-0d9aef7b2b68c0171",
            "owner_id": "326151034032",
            "tags": {
              "Name": "shreya_IGW"
            },
            "tags_all": {
              "Name": "shreya_IGW"
            },
            "vpc_id": "vpc-0de7d0f3f16d3b9aa"
          },
          "dependencies": [
            "aws_vpc.shreya_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "shreya_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326151034032:route-table/rtb-0d4dfac15a9aa1382",
            "id": "rtb-0d4dfac15a9aa1382",
            "owner_id": "326151034032",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d9aef7b2b68c0171",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "shreya_RouteTable"
            },
            "tags_all": {
              "Name": "shreya_RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de7d0f3f16d3b9aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.shreya_igw",
            "aws_vpc.shreya_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "shreya_route_table_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2076cbb80d06ce9",
            "route_table_id": "rtb-0d4dfac15a9aa1382",
            "subnet_id": "subnet-02857543a4b2c6f8a"
          },
          "dependencies": [
            "aws_internet_gateway.shreya_igw",
            "aws_route_table.shreya_route_table",
            "aws_subnet.shreya_publicsubnet",
            "aws_vpc.shreya_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "shreya-ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326151034032:security-group/sg-0a0eec7f5c0cb70e2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0eec7f5c0cb70e2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240820125605533500000002",
            "name_prefix": "terraform-",
            "owner_id": "326151034032",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shreya-EC2SecurityGroup"
            },
            "tags_all": {
              "Name": "shreya-EC2SecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de7d0f3f16d3b9aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.shreya_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "shreya-rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326151034032:security-group/sg-0d6d3446ccc70cb1e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d6d3446ccc70cb1e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.6.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20240820125605528200000001",
            "name_prefix": "terraform-",
            "owner_id": "326151034032",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shreya-RDSSecurityGroup"
            },
            "tags_all": {
              "Name": "shreya-RDSSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de7d0f3f16d3b9aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.shreya_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "shreya_privateSubnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326151034032:subnet/subnet-01c9a91ed663977cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c9a91ed663977cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "326151034032",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "shreya_privateSubnet_az1"
            },
            "tags_all": {
              "Name": "shreya_privateSubnet_az1"
            },
            "vpc_id": "vpc-0de7d0f3f16d3b9aa"
          },
          "dependencies": [
            "aws_vpc.shreya_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "shreya_privateSubnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326151034032:subnet/subnet-08776191c1f7c86fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08776191c1f7c86fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "326151034032",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "shreya_privateSubnet_az2"
            },
            "tags_all": {
              "Name": "shreya_privateSubnet_az2"
            },
            "vpc_id": "vpc-0de7d0f3f16d3b9aa"
          },
          "dependencies": [
            "aws_vpc.shreya_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "shreya_publicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326151034032:subnet/subnet-02857543a4b2c6f8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02857543a4b2c6f8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "326151034032",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "shreya_publicSubnet"
            },
            "tags_all": {
              "Name": "shreya_publicSubnet"
            },
            "vpc_id": "vpc-0de7d0f3f16d3b9aa"
          },
          "dependencies": [
            "aws_vpc.shreya_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "shreya_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326151034032:vpc/vpc-0de7d0f3f16d3b9aa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e22f3cfe4cda8d7e",
            "default_route_table_id": "rtb-04f8f16d12586eeac",
            "default_security_group_id": "sg-0cb976466729b42fd",
            "dhcp_options_id": "dopt-0b2f9af181ecefeb4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0de7d0f3f16d3b9aa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04f8f16d12586eeac",
            "owner_id": "326151034032",
            "tags": {
              "Name": "shreya_VPC"
            },
            "tags_all": {
              "Name": "shreya_VPC"
            }
          }
        }
      ]
    }
  ]
}